feat: generate base search page
